<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradbg"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="24dp"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="60dp"
    android:src="@drawable/logo_text_white"/>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
    android:layout_margin="16dp"
android:padding="16dp"
    android:elevation="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:alpha="0.56"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"/>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp">
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorBackground"
        android:id="@+id/country_code"></Spinner>
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_phno"
        android:fontFamily="sans-serif-light"
        android:alpha="0.87"
        android:backgroundTint="@android:color/transparent"
        android:textColorHint="#a1ffffff"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/login_phno"
        android:textColor="@color/colorBackground"
        android:inputType="phone"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackground"
        android:elevation="4dp"
        android:text="@string/login_button_phno"
        android:onClick="login"
        android:id="@+id/login_button"/>
</LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_terms"
    android:gravity="center"
    android:padding="32dp"/>
</LinearLayout>

</LinearLayout>