<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradbg"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/logo_text_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:elevation="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:alpha="0.56"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_hint_name"
                    android:textColor="@color/colorBackground"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:backgroundTint="#00000000"
                    android:textColorHint="#000"
                    android:textColor="@color/colorBackground"
                    android:id="@+id/login_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorBackground"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:text="@string/login_hint_gender"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/gender_spinner" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorBackground"
                    android:text="@string/login_hint_dob"
                    android:textSize="16sp"
                    android:padding="4dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="1dp"
                        android:hint="DD"
                        android:id="@+id/dd"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:backgroundTint="#00000000"
                        android:textColorHint="#000"
                        android:textColor="@color/colorBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_margin="1dp"
                        android:hint="MM"
                        android:id="@+id/mm"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:backgroundTint="#00000000"
                        android:textColorHint="#000"
                        android:textColor="@color/colorBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_margin="1dp"
                        android:hint="YYYY"
                        android:id="@+id/yyyy"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:backgroundTint="#00000000"
                        android:textColorHint="#000"
                        android:textColor="@color/colorBackground"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackground"
                android:textColor="@android:color/black"
                android:elevation="4dp"
                android:text="@string/login_button_name"
                android:onClick="login"
                android:id="@+id/login_button_final"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_terms"
            android:gravity="center"
            android:padding="32dp"/>
    </LinearLayout>

</LinearLayout>